Fixed profile pic distortion

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -72,7 +72,6 @@ body > .container {
 #homepage-profile img, #homepage-dotm img {
   max-height: 100%;
   max-width: 100%;
-  height: 250px;
   width: 250px;
   display: block;
   margin: 0 auto;
